@@ -977,8 +977,19 @@ Traceroute::outputTarget (Target * t) {
         }
 
         /* If we cannot find a traceprobe we are probably still consolidating */
-        if ((it = tg->TraceProbes.find (ttl_count)) == tg->TraceProbes.end ())
-            continue;
+        if ((it = tg->TraceProbes.find (ttl_count)) == tg->TraceProbes.end ()) {
+		if (common_consolidation && ttl_count == tg->hopDistance) {
+			if(ttl_count-2 == 1) {
+				Tbl->addItemFormatted(row_count, RTT_COL, false, "--");
+				Tbl->addItemFormatted(row_count, HOST_COL,false,  "%s", hostStr(commonPath[ttl_count-2]));
+			} else {
+				Tbl->addItemFormatted(row_count, RTT_COL, false, "--> %d", ttl_count-2);
+			}
+			break;
+		}
+
+		continue;
+	}
         /* Here we consolidate the probe that first matched the common path */
         if (ttl_count <= tg->consolidation_start)
             continue;
